@@ -115,6 +115,10 @@
 # define NEED_SPINLOCK_TYPES
 #endif
 
+#if LINUX_VERSION_CODE >= KERNEL_VERSION(2,6,24)
+# define HAVE_NETDEV_HEADER_OPS 1
+#endif
+
 #if LINUX_VERSION_CODE >= KERNEL_VERSION(2,6,8)
 # define NEED_INET_PROTOCOL
 #endif
