@@ -22,6 +22,7 @@ v2.6.25
 * Update ipsec.conf man page [Tuomo]
 * In rare circumstances, DPD could kill an active tunnel [Shinichi Furuso]
 * Compile fixes for NETKEY without KLIPS [Ajay.V.Sarraju]
+* Fix tcpdump operation on KLIPS/ipsecX interfaces [David]
 
 v2.6.24
 * Give clear warning about missing defaultroute [Tuomo]
